--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://postgres.ukkbcmdskqjgbvfputem:1tROdOxlBbn4XQJH
 @aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres.ukkbcmdskqjgbvfputem:1tROdOxlBbn4XQJH
 @aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
