--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "cors": "^2.8.5",
     "http-proxy-middleware": "^3.0.0",
     "next": "14.2.4",
     "react": "^18",
