--- a/pages/.env.production
+++ b/pages/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=https://vercel.com/narendars-projects
+NEXT_PUBLIC_API_BASE_URL=https://mynextjsproject-bc3a-mu65nzxau-narendars-projects.vercel.app
