--- a/pages/.env.production
+++ b/pages/.env.production
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL="https://mynextjsproject-d2pry854i-narendars-projects.vercel.app"
+DATABASE_URL="postgresql://postgres.ukkbcmdskqjgbvfputem:1tROdOxlBbn4XQJH
+@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.ukkbcmdskqjgbvfputem:1tROdOxlBbn4XQJH
+@aws-0-ap-south-1.pooler.supabase.com:5432/postgre"
