--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-proxy-middleware": "^3.0.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
